<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".AboutFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:src="@drawable/logo_sisi_about"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:fontFamily="@font/lato"
            android:justificationMode="inter_word"
            android:text="@string/deskripsi_sisi"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView7" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/lato_bold"
            android:text="We Do"
            android:textColor="#002073"
            android:textSize="21sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView22" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="21dp"
            android:src="@drawable/ic_baseline_poin_about"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView23" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="310dp"
            android:layout_height="83dp"
            android:layout_marginStart="9dp"
            android:layout_marginTop="20dp"
            android:justificationMode="inter_word"
            android:text="@string/poin1_weDo"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/imageView8"
            app:layout_constraintTop_toBottomOf="@+id/textView23" />

        <ImageView

            android:id="@+id/imageView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="76dp"
            android:src="@drawable/ic_baseline_poin_about"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView8" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:justificationMode="inter_word"
            android:text="@string/poin2_weDo"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/imageView9"
            app:layout_constraintTop_toBottomOf="@+id/textView24" />

        <ImageView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/ic_baseline_poin_about"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView9" />

        <TextView
            android:id="@+id/textView27"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:justificationMode="inter_word"
            android:text="@string/poin3_weDo"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/imageView8"
            app:layout_constraintTop_toBottomOf="@+id/textView25" />

        <TextView

            android:id="@+id/textView28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="27dp"
            android:fontFamily="@font/lato_bold"
            android:text="Forca ERP 2.0"
            android:textColor="#002073"
            android:textSize="21sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView27" />

        <TextView
            android:id="@+id/textView29"
            android:layout_width="335dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/lato"
            android:justificationMode="inter_word"
            android:text="FORCA Suite (ERP, CRM, dan HRIS) hadir sebagai solusi yang tepat bagi perusahaan Anda
        \n\nKami memahami bahwa saat ini seluruh pelaku bisnis perlu melakukan inovasi-inovasi dan optimalisasi pemanfaatan teknologi
        informasi (TI) agar dapat bersaing di tengah pandemi dan persaingan industri. Sementara Perkembangan teknologi informasi (TI)
        yang pesat menjadi peluang pelaku bisnis untuk memanfaatkan teknologi TI sebagai enabler atau pendorong untuk meningkatkan
        daya saing perusahaan. Pemanfaatan Teknologi Informasi ini diharapkan dapat memberi manfaat strategis antara lain ;"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView28" />

        <ImageView

            android:id="@+id/imageView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_baseline_poin_about"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView29" />

        <TextView
            android:id="@+id/textView30"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:layout_marginTop="21dp"
            android:fontFamily="@font/lato"
            android:justificationMode="inter_word"
            android:text="@string/poin1_ERPVer"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/imageView10"
            app:layout_constraintTop_toBottomOf="@+id/textView29" />

        <ImageView


            android:id="@+id/imageView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="92dp"
            android:src="@drawable/ic_baseline_poin_about"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView29" />

        <TextView
            android:id="@+id/textView31"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/lato"
            android:justificationMode="inter_word"
            android:text="@string/poin2_ERPVer"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/imageView11"
            app:layout_constraintTop_toBottomOf="@+id/textView30" />

        <ImageView

            android:id="@+id/imageView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="48dp"
            android:src="@drawable/ic_baseline_poin_about"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView11" />

        <TextView
            android:id="@+id/textView32"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/lato"
            android:justificationMode="inter_word"
            android:text="@string/poin1_ERPVer"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/imageView12"
            app:layout_constraintTop_toBottomOf="@+id/textView31" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="36dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView32" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
